--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework-simplejwt = "^5.3.1"
 django-cors-headers = "^4.4.0"
 django-filter = "^24.3"
 pillow = "^10.4.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
